user list changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
       let-user="user"
       let-signOut="signOut"
     >
-      <app-todos></app-todos>
+      <!--<app-todos></app-todos>-->
+      <app-user></app-user>
       <button (click)="signOut()">Sign Out</button>
     </ng-template>
 </amplify-authenticator>
