--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,6 +1,6 @@
 <!-- todos.component.html -->
 <main>
-    <h1>My todos</h1>
+    <h1>My Users</h1>
     <button (click)="createTodo()">+ new</button>
     <ul>
         <li *ngFor="let todo of todos;" (click)="deleteTodo(todo.id)">
