--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -21,13 +21,14 @@
               <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ user.id }}</th>
               <td class="px-6 py-4">{{ user.name }}</td>
               <td class="px-6 py-4">
-                <input [(ngModel)]="user.email" type="email" />
+                <input [(ngModel)]="user.email" type="email" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@google.com" />
               </td>
               <td class="px-6 py-4">
-                <input [(ngModel)]="user.date_of_birth" type="date" />
+                <!--<input [(ngModel)]="user.date_of_birth" type="date" />-->
+                <input [(ngModel)]="user.date_of_birth" datepicker id="default-datepicker" type="date" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select date">
               </td>
               <td class="px-6 py-4">
-                <input [(ngModel)]="user.type" type="text" />
+                <input [(ngModel)]="user.type" type="text" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
               </td>
               <td class="px-6 py-4">
                 <button (click)="updateUser(user)">Save</button>
