--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,11 @@
 body {
     margin: 0;
     background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
-    display: flex;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100vh;
+    /*height: 100vh;
     width: 100vw;
+    display: flex;
+    */
     justify-content: center;
     align-items: center;
   }
