--- a/src/app/sleep-image-upload/sleep-image-upload.component.html
+++ b/src/app/sleep-image-upload/sleep-image-upload.component.html
@@ -7,27 +7,37 @@
       </div>
     <p class="text-center mt-2">{{ progress }}%</p>
 
-    <div class="mt-4">
-      <input
-        type="file"
-        (change)="onFileSelected($event)"
-        class="block w-full text-sm text-gray-500
-               file:mr-4 file:py-2 file:px-4
-               file:rounded-full file:border-0
-               file:text-sm file:font-semibold
-               file:bg-blue-50 file:text-blue-700
-               hover:file:bg-blue-100" />
+    <app-sleep-analysis *ngIf="result" [analysisResult]="result"></app-sleep-analysis>
+
+    <div *ngIf="!result" >
+      <div class="mt-4">
+        <input
+          type="file"
+          (change)="onFileSelected($event)"
+          class="block w-full text-sm text-gray-500
+                 file:mr-4 file:py-2 file:px-4
+                 file:rounded-full file:border-0
+                 file:text-sm file:font-semibold
+                 file:bg-blue-50 file:text-blue-700
+                 hover:file:bg-blue-100" />
+      </div>
+    
+      <button
+        (click)="uploadFile()"
+        class="mt-4 w-full bg-blue-600 text-white py-2 px-4 rounded-lg
+               hover:bg-blue-700 focus:ring-4 focus:ring-blue-300">
+        Upload Image
+      </button>
+    
+      <div *ngIf="imagePreviewUrl">
+        <h3>Image Preview:</h3>
+        <img [src]="imagePreviewUrl" alt="Image Preview" style="max-width: 50%; height: auto;" />
+      </div>    
+  
+      <p *ngIf="uploadSuccess" class="text-green-500 mt-4">
+        Image uploaded successfully!
+      </p>
     </div>
-  
-    <button
-      (click)="uploadFile()"
-      class="mt-4 w-full bg-blue-600 text-white py-2 px-4 rounded-lg
-             hover:bg-blue-700 focus:ring-4 focus:ring-blue-300">
-      Upload Image
-    </button>
-  
-    <p *ngIf="uploadSuccess" class="text-green-500 mt-4">
-      Image uploaded successfully!
-    </p>
+
   </div>
 </main>
